--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -137,6 +137,7 @@
     "scr_XMLNabavniNalog",
     "scr_XMLNalogZaPrenos",
     "scr_XMLNalogZaProdaju",
+    "scr_XMLNalogZaProdaju1",
     "scr_XMLOtpremnice",
     "scr_XMLPrimke",
     "scr_XMLTemeljniceInventure"
