--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -553,7 +553,7 @@
                             "02",
                             Navigate(scr_XMLNabavniNalog),
                             "03",
-                            Navigate(scr_XMLNalogZaProdaju),
+                            Navigate(scr_XMLNalogZaProdaju1),
                             "04",
                             Navigate(scr_XMLNalogZaPrenos),
                             "05",
@@ -603,7 +603,7 @@
                                 "02",
                                 Navigate(scr_XMLNabavniNalog),
                                 "03",
-                                Navigate(scr_XMLNalogZaProdaju),
+                                Navigate(scr_XMLNalogZaProdaju1),
                                 "04",
                                 Navigate(scr_XMLNalogZaPrenos11),
                                 "05",
