--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -6,11 +6,12 @@
             isLoading,
             true
         );
-        Reset(nalogZaPrenosReadyForNavCheckbox_1);
-        If(
-            !IsBlank(SelectedFile),
+        
+        Reset(nalogZaProdajuReadyForNavCheckbox);
+        
+        If(!IsBlank(SelectedFile),
             IfError(
-                GetXML_Nalog_Za_Prenos.Run(
+                GetXML_Nalog_Za_Prodaju.Run(
                     SelectedFile,
                     SelectedFolder
                 ),
@@ -19,93 +20,87 @@
                     NotificationType.Error,
                     5000
                 ),
-                UpdateContext(
-                    {
-                        transfer: GetXML_Nalog_Za_Prenos.Run(
-                            SelectedFile,
-                            SelectedFolder
-                        )
-                    }
-                )
+                UpdateContext({
+                    sales:
+                    GetXML_Nalog_Za_Prodaju.Run(
+                        SelectedFile,
+                        SelectedFolder
+                    )
+                })
             );
-            UpdateContext({transfer_header: ParseJSON(transfer.transfer_header)});
-            UpdateContext({transfer_lines: transfer.transfer_line});
-            UpdateContext({transfer_res_entry: transfer.res_entry});
-            Clear(colTransferLines);
-            Clear(colTransferResEntries);
-            
+        
+            UpdateContext({
+                sales_header:
+                ParseJSON(sales.sales_header)
+            });
+            UpdateContext({
+                sales_lines:
+                sales.sales_line
+            });
+            UpdateContext({
+                salesResEntry:
+                sales.res_entry
+            });
+        
+            Clear(colSalesLines);
+            Clear(colSalesResEntries);
+        
             ForAll(
-                ParseJSON(transfer_lines),
+                ParseJSON(sales_lines),
                 Collect(
-                    colTransferLines,
+                    colSalesLines,
                     {
+                        Document_Type: Value(ThisRecord.Document_Type),
+                        'Sell-to_Customer_No.': Text(ThisRecord.'Sell-to_Customer_No.'),
                         Document_No: Text(ThisRecord.Document_No),
-                        Line_No: Text(ThisRecord.Line_No),
+                        Line_No: Value(ThisRecord.Line_No),
+                        Type: Value(ThisRecord.Type),
                         Item_No: Text(ThisRecord.Item_No),
-                        'Transfer-from_Code': Text(ThisRecord.'Transfer-from_Code'),
-                        'Transfer-to_Code': Text(ThisRecord.'Transfer-to_Code'),
-                        'In-Transit_Code': Text(ThisRecord.'In-Transit_Code'),
-                        GP_Posting_Group: Text(ThisRecord.GP_Posting_Group),
-                        Inv_Posting_Group: Text(ThisRecord.Inv_Posting_Group),
+                        Location_Code: Text(ThisRecord.Location_Code),
+                        Posting_Group: Text(ThisRecord.Posting_Group),
                         Description: Text(ThisRecord.Description),
                         Unit_Of_Measure: Text(ThisRecord.Unit_Of_Measure),
                         Quantity: Value(ThisRecord.Quantity),
-                        Quantity_Base: Value(ThisRecord.Quantity_Base),
+                        Unit_Price: Value(ThisRecord.Unit_Price),
+                        Line_Amount: Value(ThisRecord.Line_Amount),
+                        Line_Discount_Amount: Value(ThisRecord.Line_Discount_Amount),
+                        'Qty-to_Invoice': Value(ThisRecord.'Qty-to_Invoice'),
                         'Qty-to_Ship': Value(ThisRecord.'Qty-to_Ship'),
-                        'Qty-to_Receive': Value(ThisRecord.'Qty-to_Receive'),
-                        Quantity_Shipped: Value(ThisRecord.Quantity_Shipped),
-                        Quantity_Received: Value(ThisRecord.Quantity_Received),
-                        Outstanding_Qty: Value(ThisRecord.Outstanding_Qty),
-                        Shipment_Date: Text(ThisRecord.Shipment_Date),
-                        Receipt_Date: Text(ThisRecord.Receipt_Date)
+                        Outstand_Quantity: Value(ThisRecord.Outstand_Quantity)
                     }
                 );
+                
             );
+        
+        
             ForAll(
-                ParseJSON(transfer_res_entry),
+                ParseJSON(salesResEntry),
                 Collect(
-                    colTransferResEntries,
+                    colSalesResEntries,
                     {
                         Entry_No: Text(ThisRecord.Entry_No),
-                        Item_No: Text(ThisRecord.Item_No),
-                        Positive: Text(ThisRecord.Positive),
-                        Quantity: Value(ThisRecord.Quantity),
-                        Quantity_Base: Value(ThisRecord.Quantity_Base),
-                        Location_Code: Text(ThisRecord.Location_Code),
-                        Res_Status: Text(ThisRecord.Res_Status),
-                        Source_Type: Text(ThisRecord.Source_Type),
-                        Source_SubType: Text(ThisRecord.Source_SubType),
-                        Source_ID: Text(ThisRecord.Source_ID),
-                        Source_Ref_No: Text(ThisRecord.Source_Ref_No),
-                        Item_Tracking: Text(ThisRecord.Item_Tracking),
-                        LOT_No: Text(ThisRecord.LOT_No),
-                        Exp_Date: Text(ThisRecord.Exp_Date),
-                        Creation_Date: Text(ThisRecord.Creation_Date),
-                        Exp_Receipt_Date: Text(ThisRecord.Exp_Receipt_Date),
-                        Shipment_Date: Text(ThisRecord.Shipment_Date),
-                        Created_By: Text(ThisRecord.Created_By),
-                        'Qty-to-Handle_Base': Value(ThisRecord.'Qty-to-Handle_Base'),
-                        'Qty-to-Invoice_Base': Value(ThisRecord.'Qty-to-Invoice_Base')
-                    }
-                );
-            );
-            /*ForAll(
-                colTransferLines As Line,
-                Patch(
-                    colTransferLines,
-                    Line,
-                    {
-                        Quantity: Sum(
-                            Filter(
-                                colTransferResEntries,
-                                Item_No = Line.Item_No
-                            ),
-                            Quantity
-                        )
-                    }
+                            Item_No: Text(ThisRecord.Item_No),
+                            Positive: Text(ThisRecord.Positive),
+                            Quantity: Value(ThisRecord.Quantity),
+                            Quantity_Base: Value(ThisRecord.Quantity_Base),
+                            Location_Code: Text(ThisRecord.Location_Code),
+                            Res_Status: Text(ThisRecord.Res_Status),
+                            Source_Type: Text(ThisRecord.Source_Type),
+                            Source_SubType: Text(ThisRecord.Source_SubType),
+                            Source_ID: Text(ThisRecord.Source_ID),
+                            Source_Ref_No: Text(ThisRecord.Source_Ref_No),
+                            Item_Tracking: Text(ThisRecord.Item_Tracking),
+                            LOT_No: Text(ThisRecord.LOT_No),
+                            Exp_Date: Text(ThisRecord.Exp_Date),
+                            Creation_Date: Text(ThisRecord.Creation_Date),
+                            Exp_Receipt_Date: Text(ThisRecord.Exp_Receipt_Date),
+                            Shipment_Date: Text(ThisRecord.Shipment_Date),
+                            Created_By: Text(ThisRecord.Created_By),
+                            'Qty-to-Handle_Base': Value(ThisRecord.'Qty-to-Handle_Base'),
+                            'Qty-to-Invoice_Base': Value(ThisRecord.'Qty-to-Invoice_Base')
+                        }            
                 )
-            );*/
-            
+            );
         );
         
         Set(isLoading, false);
@@ -767,7 +762,7 @@
             Width: =Max(App.Width, App.MinScreenWidth)
             ZIndex: =3
 
-            nalogZaPrenosReadyForNavCheckbox_1 As Checkbox:
+            nalogZaProdajuReadyForNavCheckbox_1 As Checkbox:
                 BasePaletteColor: =RGBA(249, 83, 109, 1)
                 CheckboxSize: =16
                 DisplayMode: =If(!isLoading, DisplayMode.Edit, DisplayMode.Disabled)
@@ -786,6 +781,7 @@
                 ZIndex: =2
 
             saveXml_6 As button:
+                AlignInContainer: =AlignInContainer.Center
                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                 DisabledColor: =RGBA(166, 166, 166, 1)
                 DisabledFill: =RGBA(244, 244, 244, 1)
@@ -869,7 +865,7 @@
                         )
                     });
                     
-                    UpdateContext({response: UpdateXML.Run(transferJsonData, SelectedFile, SelectedFolder, nalogZaPrenosReadyForNavCheckbox_1.Checked)});
+                    UpdateContext({response: UpdateXML.Run(transferJsonData, SelectedFile, SelectedFolder, nalogZaProdajuReadyForNavCheckbox_1.Checked)});
                     
                     UpdateContext({parsedResponseMessage : ParseJSON(response.responsemessage)});
                     Set(SelectedFolder, response.folder);
