--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -553,7 +553,7 @@
                             "02",
                             Navigate(scr_XMLNabavniNalog),
                             "03",
-                            Navigate(scr_XMLNalogZaProdaju1),
+                            Navigate(scr_XMLNalogZaProdaju),
                             "04",
                             Navigate(scr_XMLNalogZaPrenos),
                             "05",
@@ -605,7 +605,7 @@
                                 "03",
                                 Navigate(scr_XMLNalogZaProdaju1),
                                 "04",
-                                Navigate(scr_XMLNalogZaPrenos11),
+                                Navigate(scr_XMLNalogZaPrenos),
                                 "05",
                                 Navigate(scr_XMLPrimke),
                                 "06",
