--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -100,7 +100,7 @@
       "zeroalltabindexes": true
     },
     "Author": "",
-    "BindingErrorCount": 14,
+    "BindingErrorCount": 160,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
@@ -137,8 +137,9 @@
     "scr_XMLNabavniNalog",
     "scr_XMLNalogZaPrenos",
     "scr_XMLNalogZaProdaju",
+    "scr_XMLTemeljniceInventure",
     "scr_XMLOtpremnice",
     "scr_XMLPrimke",
-    "scr_XMLTemeljniceInventure"
+    "scr_XMLTemeljniceInventure_1"
   ]
 }
