--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -100,7 +100,7 @@
       "zeroalltabindexes": true
     },
     "Author": "",
-    "BindingErrorCount": 160,
+    "BindingErrorCount": 15,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
@@ -139,7 +139,6 @@
     "scr_XMLNalogZaProdaju",
     "scr_XMLTemeljniceInventure",
     "scr_XMLOtpremnice",
-    "scr_XMLPrimke",
-    "scr_XMLTemeljniceInventure_1"
+    "scr_XMLPrimke"
   ]
 }
