--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -100,7 +100,7 @@
       "zeroalltabindexes": true
     },
     "Author": "",
-    "BindingErrorCount": 15,
+    "BindingErrorCount": 14,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
@@ -116,7 +116,7 @@
     "Id": "b35b18dd-0139-49e1-a028-e3cbb9c382ec",
     "InstrumentationKey": "",
     "ManualOfflineProfileId": "",
-    "Name": "Badeco%2Bsljedivost%2Bi%2Bnapredno%2Bsklad.msapp",
+    "Name": "Badeco sljedivost i napredno sklad",
     "OriginatingVersion": "1.341",
     "ParserErrorCount": 1,
     "ShowStatusBar": false
