--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -100,7 +100,7 @@
       "zeroalltabindexes": true
     },
     "Author": "",
-    "BindingErrorCount": 14,
+    "BindingErrorCount": 180,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
@@ -139,6 +139,7 @@
     "scr_XMLNalogZaProdaju",
     "scr_XMLTemeljniceInventure",
     "scr_XMLOtpremnice",
+    "scr_XMLPrimke1",
     "scr_XMLPrimke"
   ]
 }
