--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -721,7 +721,7 @@
                         X: =20
                         ZIndex: =1
 
-        NalogZaProdajuFooter_2 As groupContainer.horizontalAutoLayoutContainer:
+        NalogZaProdajuFooter As groupContainer.horizontalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
             BorderColor: =RGBA(233, 79, 76, 1)
             DropShadow: =DropShadow.Light
@@ -762,7 +762,6 @@
                 ZIndex: =2
 
             saveXml_6 As button:
-                AlignInContainer: =AlignInContainer.Center
                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                 DisabledColor: =RGBA(166, 166, 166, 1)
                 DisabledFill: =RGBA(244, 244, 244, 1)
