--- a/BSiNS/Src/scr_XMLPrimke1.fx.yaml
+++ b/BSiNS/Src/scr_XMLPrimke1.fx.yaml
@@ -146,18 +146,11 @@
                     BorderThickness: =0
                     DisplayMode: =DisplayMode.Edit
                     Fill: =RGBA(0, 0, 0, 0)
-                    Height: =155
+                    Height: =90
                     Width: =Parent.Width
                     X: =0
                     Y: =1
                     ZIndex: =1
-
-                    Container14_3 As groupContainer.manualLayoutContainer:
-                        BorderColor: =RGBA(214, 221, 224, 1)
-                        BorderThickness: =1
-                        Height: =155
-                        Width: =Parent.Width
-                        ZIndex: =1
 
                     Group4_3 As group:
                         Height: =5
@@ -205,32 +198,6 @@
                             Y: =65
                             ZIndex: =4
 
-                        Label1_18 As label:
-                            BorderColor: =RGBA(89, 0, 0, 1)
-                            Color: =RGBA(0, 0, 0, 1)
-                            DisabledColor: =RGBA(166, 166, 166, 1)
-                            Height: =24
-                            PaddingLeft: =20
-                            Size: =10
-                            Text: |-
-                                ="Datum narudžbe :   " & sales_header.Order_Date
-                            Width: =Parent.Width
-                            Y: =89
-                            ZIndex: =5
-
-                        Label1_19 As label:
-                            BorderColor: =RGBA(89, 0, 0, 1)
-                            Color: =RGBA(0, 0, 0, 1)
-                            DisabledColor: =RGBA(166, 166, 166, 1)
-                            Height: =24
-                            PaddingLeft: =20
-                            Size: =10
-                            Text: |-
-                                ="Datum knjiženja :   " & sales_header.Posting_Date
-                            Width: =Parent.Width
-                            Y: =113
-                            ZIndex: =6
-
                 Warehouse_Receipt_Lines As dataCard.blankCard:
                     BorderColor: =RGBA(0, 0, 0, 1)
                     BorderStyle: =BorderStyle.Solid
@@ -243,18 +210,18 @@
                     Y: =2
                     ZIndex: =2
 
-                    "NalogZaProdajuLines_1 As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
+                    "PrimkeLines As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
                         BorderColor: =RGBA(89, 0, 0, 1)
                         Default: |
-                            =First(Filter(colSalesLines, Text(Line_No) = scannedItem))
+                            =First(Filter(colWarehouseLines, Text(Line_No) = scannedItem))
                         DelayItemLoading: =true
                         Fill: =RGBA(237, 237, 237, 1)
                         Height: =562
-                        Items: =colSalesLines
+                        Items: =colWarehouseLines
                         Layout: =Layout.Vertical
                         LoadingSpinner: =LoadingSpinner.Data
                         OnSelect: |-
-                            =UpdateContext({wizardStep:2});
+                            =//UpdateContext({wizardStep:2});
                         TemplatePadding: =0
                         TemplateSize: =164
                         Width: =Parent.Width
@@ -379,7 +346,7 @@
                             Height: =24
                             PaddingLeft: =20
                             Size: =12
-                            Text: ="Stavke prodaje"
+                            Text: ="Primka stavke"
                             Width: |
                                 =200
                             Y: =1
@@ -466,7 +433,7 @@
                         DelayItemLoading: =true
                         Fill: =RGBA(237, 237, 237, 1)
                         Height: =560
-                        Items: =Filter(colSalesResEntries, NalogZaProdajuLines_1.Selected.Item_No = Item_No)
+                        Items: =Filter(colSalesResEntries, PrimkeLines.Selected.Item_No = Item_No)
                         Layout: =Layout.Vertical
                         LoadingSpinner: =LoadingSpinner.Data
                         TemplatePadding: =0
