--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -385,6 +385,8 @@
                                 ZIndex: =10
 
                     Container2 As groupContainer.horizontalAutoLayoutContainer:
+                        BorderColor: =RGBA(214, 221, 224, 1)
+                        BorderThickness: =0.5
                         DropShadow: =DropShadow.Light
                         Height: =49
                         LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
@@ -699,8 +701,9 @@
                             ZIndex: =1
 
                 PurchaseResEntryNav As dataCard.blankCard:
-                    BorderColor: =RGBA(0, 0, 0, 1)
+                    BorderColor: =RGBA(214, 221, 224, 1)
                     BorderStyle: =BorderStyle.Solid
+                    BorderThickness: =0.5
                     DisplayMode: =DisplayMode.Edit
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =25
