--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -382,6 +382,8 @@
                                 ZIndex: =10
 
                     Container2_4 As groupContainer.horizontalAutoLayoutContainer:
+                        BorderColor: =RGBA(214, 221, 224, 1)
+                        BorderThickness: =0.5
                         DropShadow: =DropShadow.Light
                         Height: =49
                         LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
@@ -443,8 +445,9 @@
                             ZIndex: =2
 
                 SalesNav As dataCard.blankCard:
-                    BorderColor: =RGBA(0, 0, 0, 1)
+                    BorderColor: =RGBA(214, 221, 224, 1)
                     BorderStyle: =BorderStyle.Solid
+                    BorderThickness: =0.5
                     DisplayMode: =DisplayMode.Edit
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =14
