--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -138,7 +138,7 @@
     "scr_XMLNalogZaPrenos",
     "scr_XMLNalogZaProdaju",
     "scr_XMLTemeljniceInventure",
-    "scr_XMLOtpremnice",
-    "scr_XMLPrimke"
+    "scr_XMLPrimke",
+    "scr_XMLOtpremnice"
   ]
 }
