--- a/BSiNS/Src/scr_XMLPrimke.fx.yaml
+++ b/BSiNS/Src/scr_XMLPrimke.fx.yaml
@@ -102,6 +102,8 @@
             DisplayMode: =DisplayMode.Edit
             FontColor: =
             Height: =75
+            LayoutMinHeight: =75
+            LayoutMinWidth: =Parent.Width
             Logo: =FFLogo
             OnSelectLogo: =Navigate(scrEntry)
             Style: ='Header.Style'.Primary
@@ -116,8 +118,11 @@
             ZIndex: =1
 
         PrimkeBody As groupContainer.manualLayoutContainer:
+            AlignInContainer: =AlignInContainer.SetByContainer
             DropShadow: =DropShadow.Light
             Height: =565
+            LayoutMinHeight: =100
+            LayoutMinWidth: =250
             RadiusBottomLeft: =4
             RadiusBottomRight: =4
             RadiusTopLeft: =4
@@ -162,7 +167,7 @@
                             PaddingLeft: =20
                             Size: =10
                             Text: |-
-                                ="Broj naloga :   " & warehouseHeader.'No'
+                                ="Broj naloga :   " & warehouseHeader.No
                             Width: =Parent.Width
                             Y: =17
                             ZIndex: =2
@@ -381,6 +386,8 @@
                             HoverBorderColor: =RGBA(189, 49, 51, 1)
                             HoverContentColor: =RGBA(255, 255, 255, 1)
                             HoverFillColor: =RGBA(189, 49, 51, 1)
+                            LayoutMinHeight: =70
+                            LayoutMinWidth: =280
                             OnCancel: =false
                             OnScan: |-
                                 =UpdateContext({
@@ -679,12 +686,15 @@
                         ZIndex: =1
 
         PrimkeFooter As groupContainer.horizontalAutoLayoutContainer:
+            AlignInContainer: =AlignInContainer.SetByContainer
             BorderColor: =RGBA(233, 79, 76, 1)
             DropShadow: =DropShadow.Light
             Fill: =RGBA(237, 237, 237, 1)
             Height: =50
             LayoutAlignItems: =LayoutAlignItems.End
             LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
+            LayoutMinHeight: =100
+            LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
             PaddingLeft: =15
             PaddingRight: =20
@@ -705,6 +715,8 @@
                 FontWeight: =FontWeight.Bold
                 Height: =Parent.Height
                 Label: ="Spremno za NAV"
+                LayoutMinHeight: =32
+                LayoutMinWidth: =160
                 OnCheck: =false
                 OnUncheck: =false
                 Width: =160
@@ -805,6 +817,8 @@
             FillPortions: =1
             FontColor: =
             Height: =200
+            LayoutMinHeight: =200
+            LayoutMinWidth: =200
             SpinnerSize: ='Spinner.SpinnerSize'.Huge
             Visible: =isLoading
             Width: =200
