--- a/BSiNS/Src/scr_XMLPrimke.fx.yaml
+++ b/BSiNS/Src/scr_XMLPrimke.fx.yaml
@@ -690,6 +690,7 @@
             BorderColor: =RGBA(233, 79, 76, 1)
             DropShadow: =DropShadow.Light
             Fill: =RGBA(237, 237, 237, 1)
+            FillPortions: =0
             Height: =50
             LayoutAlignItems: =LayoutAlignItems.End
             LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
@@ -725,6 +726,7 @@
                 ZIndex: =2
 
             saveXml_7 As button:
+                AlignInContainer: =AlignInContainer.Center
                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
                 DisabledColor: =RGBA(166, 166, 166, 1)
                 DisabledFill: =RGBA(244, 244, 244, 1)
