--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -9,27 +9,27 @@
             {
                 XMLFiles: Table(
                     Filter(ForAll(
-                        flowOutputs.ReadyForProcessing As file,
+                        Files.ReadyForProcessing As file,
                         {
                             FileName: Text(file.Name),
                             FileType: Text(Last(FirstN(Split(
                                 file.Name,
                                 "_"
-                            ), 1)).Value),
+                            ), 2)).Value),
                             FolderName: "ReadyForProcessing"
                         }
-                    ), Last(FirstN(Split(ThisRecord.FileName, "_"), 0)).Value = warehouseCode),
+                    ), Last(FirstN(Split(ThisRecord.FileName, "_"), 1)).Value = warehouseCode),
                     Filter(ForAll(
-                        flowOutputs.InProgress As file,
+                        Files.InProgress As file,
                         {
                             FileName: file.Name,
                             FileType: Text(Last(FirstN(Split(
                                 file.Name,
                                 "_"
-                            ), 1)).Value),
+                            ), 2)).Value),
                             FolderName: "InProgress"
                         }
-                    ), Last(FirstN(Split(ThisRecord.FileName, "_"), 0)).Value = warehouseCode)
+                    ), Last(FirstN(Split(ThisRecord.FileName, "_"), 1)).Value = warehouseCode)
                 )
             }
         );/*
@@ -209,63 +209,57 @@
                             RadiusTopRight: =4
                             ZIndex: =3
 
-                            dd_Status As dropdown.pcfdataset:
-                                BorderColor: =""
-                                BorderStyle: =""
-                                ChevronBackground: =RGBA(164, 38, 44, 1)
-                                ChevronDisabledBackground: =RGBA(166, 166, 166, 1)
-                                ChevronDisabledFill: =RGBA(244, 244, 244, 1)
-                                ChevronHoverBackground: =ColorFade(RGBA(164, 38, 44, 1), -20%)
-                                ChevronHoverFill: =RGBA(255, 255, 255, 1)
-                                DisabledBorderColor: =""
-                                DisabledColor: =RGBA(166, 166, 166, 1)
-                                DisabledFill: =RGBA(244, 244, 244, 1)
-                                FocusedBorderColor: =""
+                            dd_Status As Dropdown.pcfdataset:
+                                DefaultSelectedItems: |-
+                                    ={Id: "All", Text: "All"}
+                                DisplayMode: =DisplayMode.Edit
                                 Height: =Parent.Height
-                                HoverBorderColor: =""
-                                HoverColor: =RGBA(0, 0, 0, 1)
-                                HoverFill: =RGBA(222, 179, 184, 1)
                                 Items: |-
                                     =[{Id: "All", Text: "All"}, {Id: "ReadyForProcessing", Text: "Ready for processing"}, {Id: "InProgress", Text: "In progress"}]
                                 OnChange: |-
                                     =If(
-                                        Not(dd_FileType.Selected.Id = "0"),
+                                        Not(dd_Status.Selected.Id = "All"),
                                         UpdateContext(
                                             {
                                                 filteredFiles: Filter(
                                                     XMLFiles,
-                                                    dd_FileType.Selected.Id = ThisRecord.FileType
+                                                    dd_Status.Selected.Id = ThisRecord.FolderName
                                                 )
                                             }
                                         ),
                                         UpdateContext({filteredFiles: XMLFiles})
                                     );
                                     If(
-                                        Not(dd_Status.Selected.Id = "All"),
+                                        Not(dd_FileType.Selected.Id = "0"),
                                         UpdateContext(
                                             {
                                                 filteredFiles: Filter(
                                                     filteredFiles,
-                                                    dd_Status.Selected.Id = ThisRecord.FolderName
+                                                    dd_FileType.Selected.Id = ThisRecord.FileType
                                                 )
                                             }
                                         )
                                     );
-                                PressedBorderColor: =""
-                                PressedColor: =RGBA(255, 255, 255, 1)
-                                PressedFill: =RGBA(89, 0, 0, 1)
-                                SelectionFill: =RGBA(164, 38, 44, 1)
-                                Size: =13
                                 Width: =Parent.Width
-                                ZIndex: =1
+                                X: =0
+                                Y: =0
+                                ZIndex: =2
 
-                                TextInput2 As pcfDataField.textualColumn:
+                                TextInput3 As pcfDataField.textualColumn:
                                     FieldDisplayName: ="Text"
                                     FieldName: ="Text"
                                     FieldType: ="s"
                                     FieldVariantName: ="textualColumn"
                                     Order: =1
-                                    ZIndex: =13
+                                    ZIndex: =14
+
+                                Id1 As pcfDataField.textualColumn:
+                                    FieldDisplayName: ="Id"
+                                    FieldName: ="Id"
+                                    FieldType: ="s"
+                                    FieldVariantName: ="textualColumn"
+                                    Order: =2
+                                    ZIndex: =16
 
                     vrtcon_FileType As groupContainer.verticalAutoLayoutContainer:
                         AlignInContainer: =AlignInContainer.SetByContainer
@@ -312,22 +306,14 @@
                             Width: =Parent.Width
                             ZIndex: =3
 
-                            dd_FileType As dropdown.pcfdataset:
-                                BorderColor: =""
-                                BorderStyle: =""
-                                ChevronBackground: =RGBA(164, 38, 44, 1)
-                                ChevronDisabledBackground: =RGBA(166, 166, 166, 1)
-                                ChevronDisabledFill: =RGBA(244, 244, 244, 1)
-                                ChevronHoverBackground: =ColorFade(RGBA(164, 38, 44, 1), -20%)
-                                ChevronHoverFill: =RGBA(255, 255, 255, 1)
-                                DisabledBorderColor: =""
-                                DisabledColor: =RGBA(166, 166, 166, 1)
-                                DisabledFill: =RGBA(244, 244, 244, 1)
-                                FocusedBorderColor: =""
+                            dd_FileType As Dropdown.pcfdataset:
+                                DefaultSelectedItems: |-
+                                    ={
+                                        Id: "0",
+                                        Text: "All"
+                                    }
+                                DisplayMode: =DisplayMode.Edit
                                 Height: =Parent.Height
-                                HoverBorderColor: =""
-                                HoverColor: =RGBA(0, 0, 0, 1)
-                                HoverFill: =RGBA(222, 179, 184, 1)
                                 Items: |-
                                     =[
                                         {
@@ -391,21 +377,26 @@
                                             }
                                         )
                                     );
-                                PressedBorderColor: =""
-                                PressedColor: =RGBA(255, 255, 255, 1)
-                                PressedFill: =RGBA(89, 0, 0, 1)
-                                SelectionFill: =RGBA(164, 38, 44, 1)
-                                Size: =13
                                 Width: =Parent.Width
-                                ZIndex: =1
+                                X: =0
+                                Y: =0
+                                ZIndex: =2
 
-                                TextInput1 As pcfDataField.textualColumn:
+                                TextInput4 As pcfDataField.textualColumn:
                                     FieldDisplayName: ="Text"
                                     FieldName: ="Text"
                                     FieldType: ="s"
                                     FieldVariantName: ="textualColumn"
                                     Order: =1
-                                    ZIndex: =11
+                                    ZIndex: =15
+
+                                Id2 As pcfDataField.textualColumn:
+                                    FieldDisplayName: ="Id"
+                                    FieldName: ="Id"
+                                    FieldType: ="s"
+                                    FieldVariantName: ="textualColumn"
+                                    Order: =2
+                                    ZIndex: =17
 
                     icn_ReloadFiles As icon.Reload:
                         AlignInContainer: =AlignInContainer.End
@@ -446,7 +437,7 @@
                                         ), Last(FirstN(Split(ThisRecord.FileName, "_"), 1)).Value = warehouseCode)
                                     )
                                 }
-                            );/*
+                            );
                             UpdateContext({filteredFiles: XMLFiles});
                             If(
                                 Not(dd_Status.Selected.Id = "All"),
@@ -469,7 +460,7 @@
                                         )
                                     }
                                 )
-                            );*/
+                            );
                             UpdateContext({IsLoadingGetAllFiles: false});
                         PaddingBottom: =2
                         PaddingLeft: =2
@@ -479,68 +470,13 @@
                         X: =303
                         ZIndex: =3
 
-                    ButtonCanvas1 As Button:
-                        Align: =""
-                        BasePaletteColor: =
-                        BorderColor: =""
-                        BorderStyle: =""
-                        DisabledBorderColor: =""
-                        DisplayMode: =DisplayMode.Edit
-                        FocusedBorderColor: =""
-                        FontColor: =
-                        Height: =32
-                        HoverBorderColor: =""
-                        Icon: =""
-                        IconRotation: =0
-                        IconStyle: ="Outline"
-                        Layout: ="Icon before"
-                        LayoutMinHeight: =32
-                        LayoutMinWidth: =96
-                        OnSelect: |
-                            =UpdateContext({flowOutputs: ParseJSON(GetAll.Run(warehouseCode).outputfiles)});
-                            UpdateContext(
-                                {
-                                    outputsTable: Table(
-                                        ForAll(
-                                            flowOutputs.ReadyForProcessing As file,
-                                            {
-                                                FileName: file.Name,
-                                                FileType: Last(FirstN(Split(
-                                                    file.Name,
-                                                    "_"
-                                                ), 1)),
-                                                FolderName: "ReadyForProcessing"
-                                            }
-                                        ),
-                                        ForAll(
-                                            flowOutputs.InProgress As file,
-                                            {
-                                                FileName: file.Name,
-                                                FileType: Last(FirstN(Split(
-                                                    file.Name,
-                                                    "_"
-                                                ), 1)),
-                                                FolderName: "InProgress"
-                                            }
-                                        )
-                                    )
-                                }
-                            );
-                        PressedBorderColor: =""
-                        VerticalAlign: =""
-                        Visible: =true
-                        Width: =96
-                        X: =0
-                        Y: =0
-                        ZIndex: =4
-
                 "gl_XMLFiles As gallery.'BrowseLayout_Vertical_OneTextVariant_ver5.0'":
                     AlignInContainer: =AlignInContainer.SetByContainer
                     BorderColor: =RGBA(89, 0, 0, 1)
                     DelayItemLoading: =true
                     FillPortions: =7
                     Height: =321
-                    Items: =XMLFiles
+                    Items: =filteredFiles
                     Layout: =Layout.Vertical
                     LayoutMinHeight: =287
                     LayoutMinWidth: =320
@@ -599,11 +535,11 @@
                             Switch(
                                 Parent.Selected.FileType,
                                 "01",
-                                Navigate(scr_XMLTemeljniceInventure_1),
+                                Navigate(scr_XMLTemeljniceInventure),
                                 "02",
                                 Navigate(scr_XMLNabavniNalog),
                                 "03",
-                                Navigate(scr_XMLNalogZaProdaju1),
+                                Navigate(scr_XMLNalogZaProdaju),
                                 "04",
                                 Navigate(scr_XMLNalogZaPrenos),
                                 "05",
@@ -643,7 +579,7 @@
 
                 spn_EntryLoader As Spinner:
                     Appearance: ='Spinner.Appearance'.Primary
-                    BasePaletteColor: =
+                    BasePaletteColor: =RGBA(249, 83, 109, 1)
                     DisplayMode: =DisplayMode.Edit
                     FillPortions: =1
                     FontColor: =
