--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -4,7 +4,7 @@
     OnHidden: =
     OnVisible: |
         =UpdateContext({IsLoadingGetAllFiles: true});
-        UpdateContext({Files: ParseJSON(GetAll.Run(warehouseCode).outputfiles)});
+        UpdateContext({Files: ParseJSON(GetAll.Run().outputfiles)});
         UpdateContext(
             {
                 XMLFiles: Table(
@@ -32,7 +32,7 @@
                     ), Last(FirstN(Split(ThisRecord.FileName, "_"), 1)).Value = warehouseCode)
                 )
             }
-        );/*
+        );
         UpdateContext({filteredFiles: XMLFiles});
         If(
             Not(dd_Status.Selected.Id = "All"),
@@ -55,7 +55,7 @@
                     )
                 }
             )
-        );*/
+        );
         UpdateContext({IsLoadingGetAllFiles: false});
 
     ScreenContainer2 As groupContainer.verticalAutoLayoutContainer:
@@ -409,7 +409,7 @@
                         LayoutMinHeight: =32
                         OnSelect: |
                             =UpdateContext({IsLoadingGetAllFiles: true});
-                            UpdateContext({Files: ParseJSON(GetAll.Run(warehouseCode).outputfiles)});
+                            UpdateContext({Files: ParseJSON(GetAll.Run().outputfiles)});
                             UpdateContext(
                                 {
                                     XMLFiles: Table(
